--- a/javascript-amazon-project-main/amazon.html
+++ b/javascript-amazon-project-main/amazon.html
@@ -83,7 +83,7 @@
     </div>
     
     <!-- <script src="data/cart.js"></script> -->
-    <script src="data/products.js"></script>
+    <!-- <script src="data/products.js"></script> -->
     <script type="module" src="scriptss/script1.js"></script>
   </body>
 </html>
