script1 name changed to amazon.js

--- a/javascript-amazon-project-main/amazon.html
+++ b/javascript-amazon-project-main/amazon.html
@@ -84,7 +84,7 @@
     
     <!-- <script src="data/cart.js"></script> -->
     <!-- <script src="data/products.js"></script> -->
-    <script type="module" src="scriptss/script1.js"></script>
+    <script type="module" src="scriptss/amazon.js"></script>
   </body>
 </html>
 
