--- a/javascript-amazon-project-main/checkout.html
+++ b/javascript-amazon-project-main/checkout.html
@@ -83,7 +83,8 @@
         </div>
       </div>
     </div>
-    
+  
+    <script src="https://unpkg.com/dayjs@1.11.10/dayjs.min.js"></script> 
     <script type="module" src="scriptss/checkout.js"></script>
   </body>
   </html>
