--- a/javascript-amazon-project-main/tests-jasmine/tests.html
+++ b/javascript-amazon-project-main/tests-jasmine/tests.html
@@ -13,10 +13,10 @@
   <!-- optional: include a file here that configures the Jasmine env -->
   <script src="lib/jasmine-5.1.1/boot1.js"></script>
 
-  
-  <script type="module" src="moneytest.js"></script>
 </head>
 
 <body>
+  <script type="module" src="utils/moneytest.js"></script>
+  <script type="module" src="data/cartTest.js"></script>
 </body>
 </html>
